# switch_profile

./: Cargo.toml  LICENSE  README.md  config  config.yaml
src/: main.rs
~/.ssh/: config.klarian  config.personal
