[package]
name = "switch_profile"
version = "0.1.0"
edition = "2021"
authors = ["Alex Mikhalev"]
description = "A tool to switch between GitHub profiles"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
anyhow = "1.0.75"
dirs = "5.0.1"
twelf = { version = "0.14.0", features = ["yaml"] }
shellexpand = "3.1.0"
